--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
     "@angular/material": "~11.1.1",
+    "@angular/cdk": "~11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
